src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_invalid_instanceof_boolean.deca
// test invalide de la règle instance of



{
    boolean a = true;
    println(a instanceof boolean);
}